--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,22 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvBase"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        />
+
     <Button
+        android:id="@+id/btn_cnam31"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/tvBase"
         android:layout_centerHorizontal="true"
-        android:id="@+id/btn_cnam31"
-        android:text="@string/btn_cnam31"
-        android:onClick="fetchSallesEtMouvements" />
+        android:layout_marginTop="66dp"
+        android:onClick="fetchSallesEtMouvements"
+        android:text="@string/btn_cnam31" />
 
 </RelativeLayout>
