--- a/app/src/main/res/layout/activity_salles.xml
+++ b/app/src/main/res/layout/activity_salles.xml
@@ -13,7 +13,16 @@
         android:id="@+id/tvBase"
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
-        android:text="@string/tv_main"
         />
+
+    <Button
+        android:id="@+id/btn_cnam31"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvBase"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="66dp"
+        android:onClick="fetchSallesEtMouvements"
+        android:text="@string/btn_cnam31" />
 
 </RelativeLayout>
